# nba-playoff-predictor

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DATA_DICTIONARY.md  FEATURES.md  Makefile  README.md  environment.yml  pyproject.toml
conf/: config.yaml
data/predictions/2026/: bracket_input.csv  bracket_output.csv  bracket_teams.csv  champion_probabilities.csv  pairwise_probabilities.csv
notebooks/: 00_data_audit.ipynb  01_eda_team_stats.ipynb  02_eda_player_stats.ipynb  03_eda_injuries.ipynb  04_feature_engineering_validation.ipynb  05_era_normalization.ipynb  06_modeling_baseline.ipynb  07_modeling_advanced.ipynb  08_model_evaluation.ipynb  09_bracket_prediction_2026.ipynb  10_model_math_explainer.ipynb  11_bracket_sensitivity.ipynb
reports/: backtest_results.csv
src/nba_predictor/: __init__.py  config.py
src/nba_predictor/data/: __init__.py  bball_ref_scraper.py  data_validator.py  diagnose_scraper.py  kaggle_loader.py  nba_api_fetcher.py
src/nba_predictor/evaluation/: __init__.py  backtesting.py  cv_strategy.py  metrics.py
src/nba_predictor/features/: __init__.py  era_normalizer.py  feature_pipeline.py  injury_features.py  matchup_features.py  player_features.py  team_features.py
src/nba_predictor/models/: __init__.py  baseline.py  ensemble.py  gradient_boosting.py  monte_carlo.py  series_length.py
src/nba_predictor/predict/: __init__.py  bracket_simulator.py  build_bracket_input.py  output_formatter.py
src/nba_predictor/tracking/: __init__.py  mlflow_logger.py
tests/: conftest.py
tests/data/: test_api_smoke.py
tests/evaluation/: test_cv_strategy.py  test_metrics.py
tests/features/: test_era_normalizer.py  test_injury_features.py  test_player_features.py
tests/models/: test_monte_carlo.py
