[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-predictor"
version = "0.1.0"
description = "NBA playoff bracket predictor using historical team/player/injury data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Config class uses dynamic setattr from YAML — attr-defined errors are false positives
disable_error_code = ["attr-defined", "index", "union-attr", "import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["smoke: live network tests, run manually with -m smoke"]

[tool.coverage.run]
source = ["src/nba_predictor"]
omit = ["tests/*"]
